GBA Audio: Add blip_buf support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(USE_FFMPEG ON CACHE BOOL "Whether or not to enable FFmpeg support")
 set(USE_PNG ON CACHE BOOL "Whether or not to enable PNG support")
 set(USE_LIBZIP ON CACHE BOOL "Whether or not to enable ZIP support")
 set(USE_MAGICK ON CACHE BOOL "Whether or not to enable ImageMagick support")
+set(USE_BLIP ON CACHE BOOL "Whether or not to enable blip_buf support")
 set(BUILD_QT ON CACHE BOOL "Build Qt frontend")
 set(BUILD_SDL ON CACHE BOOL "Build SDL frontend")
 set(BUILD_PERF OFF CACHE BOOL "Build performance profiling tool")
@@ -100,6 +101,9 @@ if(HAVE_STRNDUP)
 	add_definitions(-DHAVE_STRNDUP)
 endif()
 
+set(USE_RESAMPLE OFF)
+set(RESAMPLE_LIBRARY "None")
+
 # Platform support
 if(WIN32)
 	add_definitions(-D_WIN32_WINNT=0x0600)
@@ -157,15 +161,23 @@ if(USE_FFMPEG)
 	include_directories(AFTER ${LIBAVCODEC_INCLUDE_DIRS} ${LIBAVFORMAT_INCLUDE_DIRS} ${LIBAVRESAMPLE_INCLUDE_DIRS} ${LIBAVUTIL_INCLUDE_DIRS} ${LIBSWSCALE_INCLUDE_DIRS})
 	link_directories(${LIBAVCODEC_LIBRARY_DIRS} ${LIBAVFORMAT_LIBRARY_DIRS} ${LIBAVRESAMPLE_LIBRARY_DIRS} ${LIBAVUTIL_LIBRARY_DIRS} ${LIBSWSCALE_LIBRARY_DIRS})
 	list(APPEND UTIL_SRC "${CMAKE_SOURCE_DIR}/src/platform/ffmpeg/ffmpeg-encoder.c")
-	list(APPEND UTIL_SRC "${CMAKE_SOURCE_DIR}/src/platform/ffmpeg/ffmpeg-resample.c")
+	set(RESAMPLE_SRC "${CMAKE_SOURCE_DIR}/src/platform/ffmpeg/ffmpeg-resample.c")
 	string(REGEX MATCH "^[0-9]+" LIBAVCODEC_VERSION_MAJOR ${libavcodec_VERSION})
 	string(REGEX MATCH "^[0-9]+" LIBAVFORMAT_VERSION_MAJOR ${libavformat_VERSION})
 	string(REGEX MATCH "^[0-9]+" LIBAVRESAMPLE_VERSION_MAJOR ${libavresample_VERSION})
 	string(REGEX MATCH "^[0-9]+" LIBAVUTIL_VERSION_MAJOR ${libavutil_VERSION})
 	string(REGEX MATCH "^[0-9]+" LIBSWSCALE_VERSION_MAJOR ${libswscale_VERSION})
 	list(APPEND DEPENDENCY_LIB ${LIBAVCODEC_LIBRARIES} ${LIBAVFORMAT_LIBRARIES} ${LIBAVRESAMPLE_LIBRARIES} ${LIBAVUTIL_LIBRARIES} ${LIBSWSCALE_LIBRARIES})
+	set(RESAMPLE_LIBRARY "FFmpeg")
+	set(USE_RESAMPLE ON)
 	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libavcodec${LIBAVCODEC_VERSION_MAJOR},libavformat${LIBAVFORMAT_VERSION_MAJOR},libavresample${LIBAVRESAMPLE_VERSION_MAJOR},libavutil${LIBAVUTIL_VERSION_MAJOR},libswscale${LIBSWSCALE_VERSION_MAJOR}")
 	set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "libavcodec-extra")
+endif()
+
+if(USE_BLIP)
+	set(RESAMPLE_SRC "${CMAKE_SOURCE_DIR}/src/third-party/blip_buf/blip_buf.c")
+	set(RESAMPLE_LIBRARY "blip_buf")
+	set(USE_RESAMPLE ON)
 endif()
 
 if(USE_MAGICK)
@@ -196,6 +208,15 @@ if(USE_LIBZIP)
 	list(APPEND DEPENDENCY_LIB ${LIBZIP_LIBRARIES})
 	add_definitions(-DENABLE_LIBZIP)
 	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libzip2")
+endif()
+
+if(USE_RESAMPLE)
+	string(TOUPPER ${RESAMPLE_LIBRARY} RESAMPLE_DEFINE)
+	set(RESAMPLE_DEFINE "RESAMPLE_${RESAMPLE_DEFINE}")
+	list(APPEND UTIL_SRC ${RESAMPLE_SRC})
+	add_definitions(-DRESAMPLE_LIBRARY=${RESAMPLE_DEFINE})
+else()
+	add_definitions(-DRESAMPLE_LIBRARY=RESAMPLE_NN)
 endif()
 
 # Binaries
@@ -257,7 +278,7 @@ message(STATUS "	Video recording: ${USE_FFMPEG}")
 message(STATUS "	GIF recording: ${USE_MAGICK}")
 message(STATUS "	Screenshot/advanced savestate support: ${USE_PNG}")
 message(STATUS "	ZIP support: ${USE_LIBZIP}")
-message(STATUS "	Better audio resampling: ${USE_FFMPEG}")
+message(STATUS "	Better audio resampling (${RESAMPLE_LIBRARY}): ${USE_RESAMPLE}")
 message(STATUS "Frontend summary:")
 message(STATUS "	Qt: ${BUILD_QT}")
 message(STATUS "	SDL (${SDL_VERSION}): ${BUILD_SDL}")
