Revert "All: Remove libm from list of libraries to explicitly link against", broke minimalistic ports, e.g. perf
This reverts commit 9bc4dafe56a572d93fc39325038c5d90d1651f2d.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,7 +263,7 @@ add_library(${BINARY_NAME} SHARED
 	${VFS_SRC}
 	${OS_SRC}
 	${THIRD_PARTY_SRC})
-target_link_libraries(${BINARY_NAME} ${DEBUGGER_LIB} ${OS_LIB} ${DEPENDENCY_LIB})
+target_link_libraries(${BINARY_NAME} m ${DEBUGGER_LIB} ${OS_LIB} ${DEPENDENCY_LIB})
 install(TARGETS ${BINARY_NAME} DESTINATION lib COMPONENT lib${BINARY_NAME})
 set_target_properties(${BINARY_NAME} PROPERTIES VERSION ${LIB_VERSION_STRING} SOVERSION ${LIB_VERSION_ABI})
 
