--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - sudo add-apt-repository ppa:smspillaz/cmake-2.8.12 -y
   - sudo apt-add-repository ppa:zoogie/sdl2-snapshots -y
   - sudo apt-get update -qq
-  - sudo apt-get install -y cmake libedit-dev libmagickwand-dev libpng-dev libqt5opengl5-dev libsdl2-dev libzip-dev qtbase5-dev qtmultimedia5-dev
+  - sudo apt-get purge cmake -qq
+  - sudo apt-get install -y -qq cmake libedit-dev libmagickwand-dev libpng-dev libqt5opengl5-dev libsdl2-dev libzip-dev qtbase5-dev qtmultimedia5-dev
 
 script: mkdir build && cd build && cmake .. && make
