--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,7 +136,12 @@ endif()
 include(CheckFunctionExists)
 check_function_exists(strndup HAVE_STRNDUP)
 check_function_exists(snprintf_l HAVE_SNPRINTF_L)
-check_function_exists(strtof_l HAVE_STRTOF_L)
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+	# The strtof_l on Linux not actually exposed nor actually strtof_l
+	set(HAVE_STRTOF_L OFF)
+else()
+	check_function_exists(strtof_l HAVE_STRTOF_L)
+endif()
 check_function_exists(newlocale HAVE_NEWLOCALE)
 check_function_exists(freelocale HAVE_FREELOCALE)
 check_function_exists(uselocale HAVE_USELOCALE)
