All: All ARM targets should enable ASM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,10 +132,13 @@ if(APPLE OR CMAKE_C_COMPILER_ID STREQUAL "GNU" AND BUILD_LTO)
 endif()
 
 if(BUILD_BBB OR BUILD_RASPI)
-	enable_language(ASM)
 	if(NOT BUILD_EGL)
 		add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
 	endif()
+endif()
+
+if(CMAKE_SYSTEM_PROCESSOR STREQUAL "arm")
+	enable_language(ASM)
 endif()
 
 include(CheckFunctionExists)
