--- a/res/mgba.rc
+++ b/res/mgba.rc
@@ -1,1 +1,28 @@
 IDI_ICON1 ICON DISCARDABLE "mgba.ico"
+
+#include <windows.h>
+
+VS_VERSION_INFO VERSIONINFO
+FILEVERSION     0,2,0,0
+PRODUCTVERSION  0,2,0,0
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904E4"
+        BEGIN
+            VALUE "CompanyName",        "endrift"
+            VALUE "FileDescription",    "mGBA Game Boy Advance emulator"
+            VALUE "FileVersion",        "0.2.0.0"
+            VALUE "InternalName",       BINARY_NAME
+            VALUE "LegalCopyright",     "(c) 2013 - 2015 Jeffrey Pfau"
+            VALUE "OriginalFilename",   BINARY_NAME
+            VALUE "ProductName",        PROJECT_NAME
+            VALUE "ProductVersion",     PROJECT_VERSION
+        END
+    END
+
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1252
+    END
+END
