SDL: Add Pandora bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,10 +136,14 @@ if(APPLE OR CMAKE_C_COMPILER_ID STREQUAL "GNU" AND BUILD_LTO)
 	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -flto")
 endif()
 
-if(BUILD_BBB OR BUILD_RASPI)
+if(BUILD_BBB OR BUILD_RASPI OR BUILD_PANDORA)
 	if(NOT BUILD_EGL)
 		add_definitions(-DCOLOR_16_BIT -DCOLOR_5_6_5)
 	endif()
+endif()
+
+if(BUILD_PANDORA)
+	add_definitions(-DBUILD_PANDORA)
 endif()
 
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm.*")
