SDL: Use pixman for software scaling

--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -17,6 +17,7 @@ if(SDL_VERSION EQUAL "1.2" OR NOT SDL2_FOUND)
 	find_package(SDL 1.2)
 	set(SDL_VERSION "1.2" PARENT_SCOPE)
 	set(SDL_VERSION_DEBIAN "1.2debian")
+	set(USE_PIXMAN ON)
 endif()
 
 if (NOT SDL2_FOUND AND NOT SDL_FOUND)
@@ -24,10 +25,16 @@ if (NOT SDL2_FOUND AND NOT SDL_FOUND)
 	return()
 endif()
 
+find_feature(USE_PIXMAN "pixman-1")
+if(USE_PIXMAN)
+	add_definitions(-DUSE_PIXMAN)
+	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libpixman-1.0" PARENT_SCOPE)
+endif()
+
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libsdl${SDL_VERSION_DEBIAN}" PARENT_SCOPE)
 
 file(GLOB PLATFORM_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sdl-*.c)
-set(PLATFORM_LIBRARY ${SDL_LIBRARY} ${SDLMAIN_LIBRARY})
+set(PLATFORM_LIBRARY ${SDL_LIBRARY} ${SDLMAIN_LIBRARY} ${PIXMAN-1_LIBRARIES})
 include_directories(${CMAKE_SOURCE_DIR}/src/platform/sdl ${SDL_INCLUDE_DIR})
 
 set(MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/main.c)
