--- a/src/platform/sdl/CMakeLists.txt
+++ b/src/platform/sdl/CMakeLists.txt
@@ -53,7 +53,9 @@ if(BUILD_RASPI)
 	install(TARGETS ${BINARY_NAME}-rpi DESTINATION bin COMPONENT ${BINARY_NAME}-rpi)
 endif()
 
-if(BUILD_BBB OR BUILD_RASPI OR NOT BUILD_GL)
+if(BUILD_PANDORA)
+	list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/pandora-sdl.c)
+elseif(BUILD_BBB OR BUILD_RASPI OR NOT BUILD_GL)
 	list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/sw-sdl.c)
 else()
 	list(APPEND MAIN_SRC ${CMAKE_SOURCE_DIR}/src/platform/sdl/gl-sdl.c)
