Qt: Start modularizing Qt drawing

--- a/src/platform/qt/CMakeLists.txt
+++ b/src/platform/qt/CMakeLists.txt
@@ -41,6 +41,7 @@ set(SOURCE_FILES
 	CheatsView.cpp
 	ConfigController.cpp
 	Display.cpp
+	DisplayGL.cpp
 	GBAApp.cpp
 	GBAKeyEditor.cpp
 	GIFView.cpp
